--- a/src/examples/rs-es-07-01_gpm.Rmd
+++ b/src/examples/rs-es-07-01_gpm.Rmd
@@ -11,7 +11,7 @@ directory.
 ```{r, eval=TRUE, echo=FALSE, warning=FALSE, message=FALSE, results="hide"}
 # Set environment --------------------------------------------------------------
 if(Sys.info()["sysname"] == "Windows"){
-  source("D:/active/moc/msc-ui/scripts/msc-phygeo-ei/src/functions/set_environment.R")
+  source("C:/Users/tnauss/permanent/edu/msc-phygeo-remote-sensing/moer-msc-phygeo-remote-sensing/src/functions/set_environment.R")
 } else {
   source("/media/permanent/active/moc/msc-ui/scripts/msc-phygeo-ei/src/functions/set_environment.R")
 }
