--- a/docs/_includes/test01.Rmd
+++ b/docs/_includes/test01.Rmd
@@ -7,6 +7,10 @@ output:
     keep_md: yes
 ---
 
+```{r global_options, include=FALSE}
+knitr::opts_chunk$set(fig.path='{{ site.baseurl }}/assets/images/rmd_images/')
+```
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
